objects/Salesforce_Box_Metadata_Configuration__mdt/Salesforce_Box_Metadata_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Salesforce Box Metadata Configuration</label>
    <pluralLabel>Salesforce Box Metadata Configurations</pluralLabel>
</CustomObject>