objects/Salesforce_Box_Metadata_Configuration__mdt/fields/Box_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Box_Account_Type__c</fullName>
    <label>Box Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>