objects/Salesforce_Box_Metadata_Configuration__mdt/fields/Box_Metadata_Name__c.field-meta.xml
<CustomField>
    <fullName>Box_Metadata_Name__c</fullName>
    <label>Box Metadata Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>