objects/Salesforce_Box_Metadata_Configuration__mdt/fields/Metadata_Name_and_Record_Field__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Name_and_Record_Field__c</fullName>
    <label>Metadata Name and Record Field</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>