objects/Salesforce_Box_Metadata_Configuration__mdt/fields/Record_Type_Check_Fields__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Check_Fields__c</fullName>
    <label>Record Type Check Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>